fix msg share + align site-info

--- a/assets/app.css
+++ b/assets/app.css
@@ -626,6 +626,22 @@ html {
   top: 14rem;
 }
 
+.left-\[-121px\]{
+  left: -121px;
+}
+
+.left-\[-124px\]{
+  left: -124px;
+}
+
+.top-\[2px\]{
+  top: 2px;
+}
+
+.top-\[-1px\]{
+  top: -1px;
+}
+
 .isolate{
   isolation: isolate;
 }
@@ -864,6 +880,11 @@ html {
           margin-inline-start: 1.5rem;
 }
 
+.ms-\[32px\]{
+  -webkit-margin-start: 32px;
+          margin-inline-start: 32px;
+}
+
 .ms-auto{
   -webkit-margin-start: auto;
           margin-inline-start: auto;
@@ -929,9 +950,9 @@ html {
   margin-top: 80px;
 }
 
-.ms-\[32px\]{
-  -webkit-margin-start: 32px;
-          margin-inline-start: 32px;
+.ms-\[10px\]{
+  -webkit-margin-start: 10px;
+          margin-inline-start: 10px;
 }
 
 .block{
@@ -1278,6 +1299,10 @@ html {
   gap: 20px;
 }
 
+.gap-\[25px\]{
+  gap: 25px;
+}
+
 .gap-\[5px\]{
   gap: 5px;
 }
@@ -1286,8 +1311,8 @@ html {
   gap: 6px;
 }
 
-.gap-\[25px\]{
-  gap: 25px;
+.gap-\[28px\]{
+  gap: 28px;
 }
 
 .self-start{
@@ -1483,6 +1508,11 @@ html {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+
 .bg-cover{
   background-size: cover;
 }
@@ -1526,6 +1556,10 @@ html {
 
 .p-\[6px\]{
   padding: 6px;
+}
+
+.p-\[8px\]{
+  padding: 8px;
 }
 
 .px-10{
@@ -1616,6 +1650,11 @@ html {
 .py-\[4px\]{
   padding-top: 4px;
   padding-bottom: 4px;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .\!pe-8{
@@ -2931,6 +2970,11 @@ tbody tr:last-child td{
             margin-inline-end: 2rem;
   }
 
+  .sm\:ms-0{
+    -webkit-margin-start: 0px;
+            margin-inline-start: 0px;
+  }
+
   .sm\:mt-0{
     margin-top: 0px;
   }
@@ -2953,11 +2997,6 @@ tbody tr:last-child td{
 
   .sm\:mt-\[15rem\]{
     margin-top: 15rem;
-  }
-
-  .sm\:ms-0{
-    -webkit-margin-start: 0px;
-            margin-inline-start: 0px;
   }
 
   .sm\:block{
